Got the unit tests passing again